[JSC] "return this" in a constructor does not need a branch on isObject(this) https://bugs.webkit.org/show_bug.cgi?id=157775

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-05-16
Reviewed by Saam Barati and Ryosuke Niwa.

When returning "this" in a constructor, the bytecode generator was generating:
    is_object         locX, this
    jtrue             locX, 5(->second ret)
    ret               this
    ret               this

That code is eliminated in DFG but it is pretty costly lower tiers.

This patch changes bytecode generation to avoid the is_object test
when possible and not generate two ret if they encode the same thing.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitReturn):

Canonical link: https://commits.webkit.org/175911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200992 268f45cc-cd09-0410-ab3c-d52691b4dbfc